--- a/AnotherTest/AnotherTest.csproj
+++ b/AnotherTest/AnotherTest.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <AddRazorSupportForMvc>true</AddRazorSupportForMvc>
+    <AssemblyName>AnotherTest.IAmFaraAddin</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
@@ -12,9 +13,12 @@
 
 
   <ItemGroup>
-    <None Remove="TestPages\" />
+    <None Remove="Pages\" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="TestPages\" />
+    <Folder Include="Pages\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Core\Core.csproj" />
   </ItemGroup>
 </Project>
