--- a/AnotherTest/AnotherTest.csproj
+++ b/AnotherTest/AnotherTest.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Razor">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <AddRazorSupportForMvc>true</AddRazorSupportForMvc>
     <AssemblyName>AnotherTest.IAmFaraAddin</AssemblyName>
   </PropertyGroup>
