--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -1,9 +1,16 @@
 <Project Sdk="Microsoft.NET.Sdk.Razor">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFrameworks>netcoreapp3.1;net5.0</TargetFrameworks>
     <AddRazorSupportForMvc>true</AddRazorSupportForMvc>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Remove="TestPages\**" />
+    <Content Remove="TestPages\**" />
+    <EmbeddedResource Remove="TestPages\**" />
+    <None Remove="TestPages\**" />
+  </ItemGroup>
 
   <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
@@ -13,8 +20,5 @@
 
   <ItemGroup>
     <None Remove="TestPages\" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="TestPages\" />
   </ItemGroup>
 </Project>
