Nuget package published with 0.0.1 version

--- a/src/Main/Core/Core.csproj
+++ b/src/Main/Core/Core.csproj
@@ -5,6 +5,11 @@
     <AddRazorSupportForMvc>true</AddRazorSupportForMvc>
     <AssemblyName>IAmFara.Core</AssemblyName>
     <RootNamespace>IAmFara.Core</RootNamespace>
+	<PackageId>IAmFara.Core</PackageId>
+	<Version>0.0.1</Version>
+	<Authors>Faramarz Bodaghi</Authors>
+	<Company>IAmFara</Company>
+	<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
