--- a/src/Main/Web/Web.csproj
+++ b/src/Main/Web/Web.csproj
@@ -9,8 +9,6 @@
   <PropertyGroup Condition=" '$(RunConfiguration)' == 'IAmFara.Web' " />
   <PropertyGroup Condition=" '$(RunConfiguration)' == 'Web' " />
   <ItemGroup>
-    <ProjectReference Include="..\Core\Core.csproj">
-      <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
-    </ProjectReference>
+    <ProjectReference Include="..\Core\Core.csproj" />
   </ItemGroup>
 </Project>
