Added core as nuget package to all required projects closes #17

--- a/src/Samples/AnotherTest/AnotherTest.csproj
+++ b/src/Samples/AnotherTest/AnotherTest.csproj
@@ -15,7 +15,10 @@
   <ItemGroup>
     <None Remove="Pages\" />
   </ItemGroup>
+  
+
+
   <ItemGroup>
-    <ProjectReference Include="..\Core\Core.csproj" />
+    <PackageReference Include="IAmFara.Core" Version="0.0.1" />
   </ItemGroup>
 </Project>
