--- a/src/Samples/MyRazorLibrary/MyRazorLibrary.csproj
+++ b/src/Samples/MyRazorLibrary/MyRazorLibrary.csproj
@@ -17,8 +17,11 @@
 	</ItemGroup>
 	
   <ItemGroup>
-    <ProjectReference Include="..\Core\Core.csproj" />
     <ProjectReference Include="..\MyRazorLibraryBacking\MyRazorLibraryBacking.csproj" />
   </ItemGroup>
+
+	<ItemGroup>
+		<PackageReference Include="IAmFara.Core" Version="0.0.1" />
+	</ItemGroup>
   
 </Project>
