--- a/src/Samples/SharedViews/SharedViews.csproj
+++ b/src/Samples/SharedViews/SharedViews.csproj
@@ -11,9 +11,9 @@
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\Core\Core.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="IAmFara.Core" Version="0.0.1" />
+	</ItemGroup>
   
 
 
