Re-arranged * IPlugin * IFeature * IPage * INavBarItem * BasePlugin * BaseFeature

--- a/src/Main/Web/Web.csproj
+++ b/src/Main/Web/Web.csproj
@@ -9,6 +9,6 @@
   <PropertyGroup Condition=" '$(RunConfiguration)' == 'IAmFara.Web' " />
   <PropertyGroup Condition=" '$(RunConfiguration)' == 'Web' " />
   <ItemGroup>
-    <PackageReference Include="IAmFara.Core" Version="0.0.1" />
+    <ProjectReference Include="..\Core\Core.csproj" />
   </ItemGroup>
 </Project>
