--- a/src/Samples/AnotherTest/AnotherTest.csproj
+++ b/src/Samples/AnotherTest/AnotherTest.csproj
@@ -19,6 +19,6 @@
 
 
   <ItemGroup>
-    <PackageReference Include="IAmFara.Core" Version="0.0.1" />
+    <PackageReference Include="IAmFara.Core" />
   </ItemGroup>
 </Project>
