Added a client test library This library has responsibility to validate Plugins

--- a/src/Main/Tests/Core.Tests/Core.Tests.csproj
+++ b/src/Main/Tests/Core.Tests/Core.Tests.csproj
@@ -4,6 +4,10 @@
     <TargetFramework>net5.0</TargetFramework>
 
     <IsPackable>false</IsPackable>
+
+    <RootNamespace>IAmFara.Core.Tests</RootNamespace>
+
+    <AssemblyName>IAmFara.Core.Tests</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
@@ -14,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Core\Core.csproj" />
+    <ProjectReference Include="..\..\Core\Core.csproj" />
   </ItemGroup>
 
 </Project>
