working with new components and taghelpers

--- a/src/Main/Bootstrap4/Bootstrap4.csproj
+++ b/src/Main/Bootstrap4/Bootstrap4.csproj
@@ -27,5 +27,9 @@
   <ItemGroup>
     <None Remove="Components\" />
     <None Remove="ComponentModels\" />
+    <None Remove="Pages\Shared\Components\Breadcrump\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Pages\Shared\Components\Breadcrump\" />
   </ItemGroup>
 </Project>
