--- a/src/Main/Business/Business.csproj
+++ b/src/Main/Business/Business.csproj
@@ -16,6 +16,7 @@
     <None Remove="Repositories\" />
     <None Remove="Contexts\" />
     <None Remove="Microsoft.EntityFrameworkCore.SqlServer" />
+    <None Remove="Microsoft.EntityFrameworkCore.InMemory" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Repositories\" />
