--- a/Backend/src/IAmFara/App/appsettings.json
+++ b/Backend/src/IAmFara/App/appsettings.json
@@ -10,5 +10,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "DbLogger": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Debug"
+    }
+  },
   "AllowedHosts": "*"
 }
