improvments started implementing authentication

--- a/Backend/src/IAmFara/App/appsettings.json
+++ b/Backend/src/IAmFara/App/appsettings.json
@@ -1,19 +1,11 @@
 {
   "ConnectionStrings": {
-    "AppDbContext": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=IAmFaraDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
-    "LoggingDbContext": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=IAmFaraLoggingDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
-
+    "AppConnectionString": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=IAmFaraDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "DbLogger": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Debug"
     }
   },
   "AllowedHosts": "*"
