--- a/Backend/src/IAmFara/Infrastructure/Infrastructure.csproj
+++ b/Backend/src/IAmFara/Infrastructure/Infrastructure.csproj
@@ -13,4 +13,12 @@
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="6.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Data\Data.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Authentication\" />
+  </ItemGroup>
+
 </Project>
