--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@popperjs/core": "^2.11.5",
     "@reduxjs/toolkit": "^1.8.3",
+    "@tanstack/react-query": "^4.2.1",
+    "@tanstack/react-query-devtools": "^4.2.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -52,6 +54,7 @@
     "@vitejs/plugin-react": "^1.3.2",
     "antd": "^4.21.7",
     "concurrently": "^7.0.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "fs-extra": "^9.1.0",
     "glob": "^7.1.6",
     "lerna": "^4.0.0",
