--- a/src/Frontend/iamfara/package.json
+++ b/src/Frontend/iamfara/package.json
@@ -14,14 +14,14 @@
     "@emotion/styled": "11.10.6",
     "@swc/helpers": "~0.5.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-router-dom": "^6.11.1"
   },
   "devDependencies": {
     "@emotion/babel-plugin": "11.10.6",
     "@nx/cypress": "16.1.4",
     "@nx/eslint-plugin": "16.1.4",
     "@nx/js": "16.1.4",
-    "copyfiles": "^2.4.1",
     "@nx/linter": "16.1.4",
     "@nx/react": "16.1.4",
     "@nx/vite": "16.1.4",
@@ -37,6 +37,7 @@
     "@vitejs/plugin-react": "^3.0.0",
     "@vitest/coverage-c8": "^0.31.0",
     "@vitest/ui": "^0.31.0",
+    "copyfiles": "^2.4.1",
     "cypress": "^12.11.0",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
