--- a/src/Frontend/iamfara/package.json
+++ b/src/Frontend/iamfara/package.json
@@ -13,8 +13,10 @@
     "@emotion/react": "11.10.6",
     "@emotion/styled": "11.10.6",
     "@swc/helpers": "~0.5.0",
+    "antd": "^5.5.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-responsive": "^9.0.2",
     "react-router-dom": "^6.11.1"
   },
   "devDependencies": {
