--- a/src/Frontend/iamfara/package.json
+++ b/src/Frontend/iamfara/package.json
@@ -14,6 +14,9 @@
     "dependencies": {
         "@emotion/react": "11.10.6",
         "@emotion/styled": "11.10.6",
+        "@fortawesome/fontawesome-svg-core": "^6.4.0",
+        "@fortawesome/free-solid-svg-icons": "^6.4.0",
+        "@fortawesome/react-fontawesome": "^0.2.0",
         "@swc/helpers": "~0.5.0",
         "antd": "^5.5.0",
         "react": "18.2.0",
