--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -20,6 +20,7 @@ jobs:
         with:
           node-version: "18"
           cache: 'npm'
+          cache-dependency-path: src/frontend/package-lock.json
 
       - name: Nuke .npmrc og sett public registry
         run: |
@@ -38,7 +39,7 @@ jobs:
           dotnet-version: "8.0.x"
 
       - name: Build and Publish Backend
-        working-directory: src/Backend
+        working-directory: src/backend
         run: dotnet publish -c Release -o ./publish
 
       - name: Deploy to Server
@@ -47,4 +48,4 @@ jobs:
           server: iamfara.com
           username: ${{ secrets.FTP_User_Name }}
           password: ${{ secrets.FTP_Password }}
-          local-dir: ./src/Backend/publish/
+          local-dir: ./src/backend/publish/
