--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -18,9 +18,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: "18"
-          cache: 'npm'
-          cache-dependency-path: src/frontend/package-lock.json
+          node-version: 18
 
       - name: Nuke .npmrc og sett public registry
         run: |
