--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -16,21 +16,29 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
+  uses: actions/setup-node@v3
+  with:
+    node-version: 18
+    cache: false  # 💣 turn off cache completely
 
-      - name: Nuke all auth
-        run: |
-          rm -f ~/.npmrc
-          rm -f src/frontend/.npmrc
-          npm config delete '//registry.npmjs.org/:_authToken'
+    - name: Clean all npm config
+      run: |
+        rm -f ~/.npmrc
+        rm -f .npmrc
+        rm -f src/frontend/.npmrc
+        echo "registry=https://registry.npmjs.org/" > ~/.npmrc
+        npm config set registry https://registry.npmjs.org/
+        npm config delete '//registry.npmjs.org/:_authToken'
 
-      - name: Build and Copy Frontend
-        working-directory: src/frontend
-        run: |
-          npm ci --registry=https://registry.npmjs.org/
-          npm run build
+    - name: Force clean install without auth
+      working-directory: src/frontend
+      env:
+        NPM_CONFIG_REGISTRY: https://registry.npmjs.org/
+        NPM_CONFIG_AUTH: ""
+      run: |
+        rm -rf node_modules package-lock.json
+        npm install --no-audit --no-fund
+        npm run build
 
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v1
