--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -45,7 +45,7 @@ jobs:
           dotnet-version: "8.0.x"
 
       - name: Build and Publish Backend
-        working-directory: src/Backend/
+        working-directory: src/backend/
         run: dotnet publish -c Release -o ./publish
 
       - name: Deploy to Server
@@ -54,4 +54,4 @@ jobs:
           server: iamfara.com
           username: ${{ secrets.FTP_User_Name }}
           password: ${{ secrets.FTP_Password }}
-          local-dir: ./src/Backend/publish/
+          local-dir: ./src/backend/publish/
